# fracdiff-lite

./: README.md  pyproject.toml
tests/: test_howto.py
